added pretter/small fixes in eslint and package.json

--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "project-vitereact",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint \"src\" --ext js,jsx",
+    "format": "prettier \"src/**/*.{js,jsx,ts,tsx,css,scss,json,md}\" --write",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.1",
     "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -23,13 +22,18 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.28.4",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@eslint/js": "^9.36.0",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "prettier": "^3.6.2",
     "rollup-plugin-visualizer": "^6.0.4",
     "sass": "^1.93.2",
     "sharp": "^0.34.4",
