--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "lightningcss": "^1.27.0",
     "prettier": "^3.6.2",
-    "rollup-plugin-visualizer": "^6.0.4",
     "sass": "^1.93.2",
     "sharp": "^0.34.4",
     "svgo": "^4.0.0",
